vpc/ticket1/public_subnet.tf
resource "aws_subnet" "public1" {
  # Your code goes here 






  # Please do not change below code
  tags = local.task_tags
}


resource "aws_subnet" "public2" {
   # Your code goes here 






  # Please do not change below code
  tags = local.task_tags
}



resource "aws_subnet" "public3" {
   # Your code goes here 




  # Please do not change below code
  tags = local.task_tags
}
